--- a/vignettes/x.3-Uncertain-dynamic-solver-use.Rmd
+++ b/vignettes/x.3-Uncertain-dynamic-solver-use.Rmd
@@ -43,125 +43,124 @@ The first step is to determine the number of uncertain variables and the number 
 
 ```{r Create samples, warning=FALSE, message=FALSE}
 ConcDividerVar <- World$NewCalcVariable("Mass2ConcDivider")
-ConcDiverFactor <- ConcDividerVar$execute()
-# Define the number of samples and the number of variables
-n_samples <- 100
-n_vars <- 3
-
-# Generate LHS
-lhs_samples_vars <- randomLHS(n_samples, n_vars)
+# We keep the solver object, but for normal use, apply the "World" methods / properties; the new solver is part of it!
+SB1solver <- World$NewSolver("SB1Solve")
 ```
 
 The lhs samples are pulled from a uniform distribution between 0 and 1. So these numbers have to be scaled to the real values you want to use, and it is possible to transform this uniform distribution to a different distribution. In this example, a triangular distribution will be used. 
 
 Define triangular distribution function:
 ```{r Define triangular distribution function, warning=FALSE, message=FALSE}
-# Triangular distribution function
-triangular_cdf_inv <- function(u, # LH scaling factor
-                               a, # Minimum
-                               b, # Maximum
-                               c) { # Peak value
-  ifelse(u < (c-a)/(b-a),
-         a + sqrt(u * (b-a) * (c-a)),
-         b - sqrt((1-u) * (b-a) * (b-c)))
-}
+triangular_cdf_inv <- World$Make_inv_unif01(fun_type = "triangular", pars = list (a=0.5, b=1.5, c=1))
+par(mfrow = c(1, 2))
+curve(triangular_cdf_inv, from = 0, to = 1)
+#check sampling 
+hist(triangular_cdf_inv(runif(5000)), breaks = 40)
+par(mfrow = c(1, 2))
 ```
 
 ##### Prepare variable samples
-Now we are ready to prepare the variable data and define the min, max and peak value of the distribution for each variable. 
+Now we are ready to prepare the variable data and define the min, max and peak value of the distribution for each variable.
 
-In this example the following three variables are used: 
+In this example the following three variables are used:
 
-1. Molecular weight
-2. Area for regional river
-3. Erosion of agricultural soil
+1.  TODO
+2.  TODO
+3.  TODO
 
-In the chunk below, the name, scale, subcompartment, min, max and peak value are defined for each variable.
+In the chunk below, the name, scale, subcompartment, min, max and peak value are defined for each variable, based on the values in the 'World'.
 
 ```{r Get min, max and peak value of variable values, warning=FALSE, message=FALSE}
 # Define the names of the uncertain variables
-var1Name <- "kdeg"
 
-var1 <- World$fetchData(var1Name) |>
-  mutate(Scale = NA) |>
-  filter(SubCompart == "river")
+Boxvars <- data.frame( # TODO? "waarde"
+  varName = "kdeg",
+  SubCompart = c("river", "air", "agriculturalsoil")
+) |> World$fetch_current()
 
-# Set the parameters for the triangular distribution
-var1$a <- var1$kdeg*0.5    # Minimum value
-var1$b <- var1$kdeg*1.5    # Maximum value
-var1$c <- var1$kdeg        # peak value (peak)
 
-# Define the names of the uncertain variables
-var2Name <- "kdeg"
+Boxvars <- Boxvars |>
+  mutate(
+    a = waarde*0.5,
+    b = waarde*1.5) 
 
-var2 <- World$fetchData(var2Name) |>
-  mutate(Scale = NA) |>
-  filter(SubCompart == "air")
+#Define funs
+varFuns <- apply(Boxvars, 1, function(aRow){ 
+  prepArgs <- as.list(as.numeric(aRow[c("a", "b", "waarde")]))
+  names(prepArgs) <- c("a", "b", "c") 
+  #now, with all arguments properly prepared, we can
+  World$Make_inv_unif01(fun_type = "triangular", pars = prepArgs)
+})
 
-# Set the parameters for the triangular distribution
-var2$a <- var2$kdeg*0.5    # Minimum value
-var2$b <- var2$kdeg*1.5    # Maximum value
-var2$c <- var2$kdeg         # peak value (peak)
-
-# Define the names of the uncertain variables
-var3Name <- "kdeg"
-
-var3 <- World$fetchData(var3Name) |>
-  filter(SubCompart == "agriculturalsoil") |>
-  mutate(Scale = NA)
-
-# Set the parameters for the triangular distribution
-var3$a <- var3$kdeg*0.5    # Minimum value
-var3$b <- var3$kdeg*1.5    # Maximum value
-var3$c <- var3$kdeg         # peak value (peak)
-```
-
-Now this data needs to be combined into a tibble, and the function for the triangular distribution written earlier is applied to the tibble. The result is a nested tibble, containing the name, scale and subcompartment for each variable, and the sample data is nested. 
-
-```{r Scale the samples to the distributions, warning=FALSE, message=FALSE}
-params <- tibble(
-  varName = c(var1Name, var2Name, var3Name),
-  Scale = c(var1$Scale, var2$Scale, var3$Scale),
-  SubCompart = c(var1$SubCompart, var2$SubCompart, var3$SubCompart),
-  data = list(
-    tibble(id = c("a", "b", "c"), value = c(var1$a, var1$b, var1$c)),
-    tibble(id = c("a", "b", "c"), value = c(var2$a, var2$b, var2$c)),
-    tibble(id = c("a", "b", "c"), value = c(var3$a, var3$b, var3$c))
-  )
-)
-
-sample_df <- params
-
-# Transform each LHS sample column to the corresponding triangular distribution
-for (i in 1:n_vars) {
-  a <- filter(params$data[[i]], id == "a") %>% pull(value)
-  b <- filter(params$data[[i]], id == "b") %>% pull(value)
-  c <- filter(params$data[[i]], id == "c") %>% pull(value)
-  
-  samples <- triangular_cdf_inv(lhs_samples_vars[, i], a, b, c)
-  
-  # Create a new tibble for 'data' with samples replacing original values
-  new_data <- tibble(value = samples)
-  
-  # Update the data column in the sample_df
-  sample_df$data[[i]] <- new_data
-}
 ```
 
 ##### Prepare emission data
 
-In this example, we will use a dataframe with the emissions for several compartments at several times. These emissions are converted to a list of functions in the solver, so that emissions at other times can be estimated.
+In this example, we will take a steady state emission data frame as the starting point for creating the triangular distributions. You could also directly enter the min, max and peak values if you have them.
 
-```{r Create dynamic emission dataframe, warning=FALSE, message=FALSE}
-emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU","aRU", "s2RU", "w1RU"), Emis = c(10, 10, 10,20, 20, 20), Timed = c(1, 2, 3, 4, 5, 6)) # convert 1 t/y to si units: kg/s
+```{r Create steady state emission dataframe, warning=FALSE, message=FALSE}
+# Create the steady state emission dataframe
+emissions <- data.frame(Abbr = c("aRU", "s2RU", "w1RU"), Emis = c(10000, 10000, 10000)) # convert 1 t/y to si units: kg/s
+
+MW <- World$fetchData("MW")
 
 emissions <- emissions |>
-  mutate(Timed = Timed*(365.25*24*60*60)) |> ungroup() |>
   mutate(Emis = Emis*1000/(365*24*60*60)) 
 
-tmax <- 365.25*24*60*60*10
-times <- seq(0, tmax, length.out = 10)
 ```
+
+
+Now that the emission data frame is made, we can scale the samples we took earlier to the triangular distribution just like we did for the variables.
+
+```{r Scale the emissions to the distributions, warning=FALSE, message=FALSE}
+
+emissions$a <- emissions$Emis * 0.7
+emissions$b <- emissions$Emis * 1.3
+
+emisFuns <- apply(rowwise(emissions) |> select(a, b, Emis), 1, function(therow){
+  abcArgs <- as.list(as.numeric(therow))
+  names(abcArgs) <- c("a", "b", "c")
+  World$Make_inv_unif01("triangular", abcArgs)
+})
+
+# to identify the box by Abbr
+names(emisFuns) <- emissions$Abbr
+```
+
+```{r Create samples, warning=FALSE, message=FALSE}
+
+n_samples <- 2 # The number of samples you want to pull from the distributions for each variable
+
+World$Solve(emissions = emisFuns, var_box_df = Boxvars, var_invFun = varFuns, nRUNs = n_samples)
+conc <- World$GetConcentration()
+# behind the scenes:
+# library(lhs)
+
+# n_lhs <- n_vars + n_emiscomps # Total number of vectors to create with latin hypercube sampling (lhs)
+
+# lhs_samples <- optimumLHS(n_samples, n_lhs) # Generate numbers between 0 and 1 using lhs
+
+# # Separate the samples for the variable and emission distributions from each other:
+# lhs_samples_vars <- lhs_samples[, 1:n_vars] 
+# lhs_samples_emis <- lhs_samples[, (n_vars + 1):ncol(lhs_samples)]
+```
+
+If you think your variables are correlated you can use ?? TODO, via normal ?? ask SIM:
+```{r}
+# # Define the desired correlation matrix
+# desired_correlation <- matrix(c(1, 0.8, 0.5,
+#                                 0.8, 1, 0.3,
+#                                 0.5, 0.3, 1), nrow = 3)
+# 
+# # Perform Cholesky decomposition on the desired correlation matrix
+# L <- chol(desired_correlation)
+# 
+# # Transform the LHS samples to have the desired correlation structure
+# correlated_samples <- lhs_samples_vars %*% L
+# #TODO now values are out of the 0-1 range! ????
+
+```
+
 
 #### Solve 
 The UncertainDynamicSolver is needed to apply simplebox probabilistically using a tibble with nested samples.
